tests/ui/not-repeatable.stderr
error[E0599]: no method named `quote_into_iter` found for type `std::net::Ipv4Addr` in the current scope
 --> $DIR/not-repeatable.rs:6:13
  |
6 |     let _ = quote! { #(#ip)* };
  |             ^^^^^^^^^^^^^^^^^^
  |
  = note: the method `quote_into_iter` exists but the following trait bounds were not satisfied:
          `&mut std::net::Ipv4Addr : quote::__rt::ext::RepIteratorExt`
          `&std::net::Ipv4Addr : quote::__rt::ext::RepIteratorExt`
          `std::net::Ipv4Addr : quote::__rt::ext::RepIteratorExt`
          `std::net::Ipv4Addr : quote::__rt::ext::RepToTokensExt`
  = note: this error originates in a macro outside of the current crate (in Nightly builds, run with -Z external-macro-backtrace for more info)

For more information about this error, try `rustc --explain E0599`.
